完成fastDFS文件上传，新加日志管理

--- a/src/main/resources/static/errorpage/error-400.html
+++ b/src/main/resources/static/errorpage/error-400.html
@@ -9,5 +9,6 @@
 </head>
 <body>
 	<h1>对不起，出现了400错误！</h1>
+	<img src="http://192.168.83.129/group1/M00/00/00/wKhTgVuiCTaANNqiAAMedoHKRiI680.jpg"/>
 </body>
 </html>
